--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,5 @@ workflows:
   version: 2
   one_and_two: # this is the name of our workflow
     jobs:
+      - two
       - one
-      - two:
-          requires:
-            - one
